--- a/templates/login.html
+++ b/templates/login.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="icon" href="{{routePrefix}}{{url_for('static', filename='images/favicon.png')}}" type="image/png">
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4"><br/><br/><br/><br/><br/>
-                <h2 class="text-center">Login</h2>
+        <div class="row"><br/><br/><br/><br/><br/>
+            <div class="col-md-4 col-md-offset-4" style="background-color: ghostwhite;">
+                <h2 class="text-center"><img src="{{routePrefix}}{{url_for('static', filename='images/idcard.png')}}"></img><br/>Login</h2>
 
                 {%if(firstLogin)%}
-                <form method="post" action="/register">
+                <form method="post" action="{{routePrefix}}/register">
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">Username:</label>
                         <input type="text" class="form-control" id="uname" name="uname" placeholder="Enter username" value="{{username}}" readonly>
                     </div>
                     
                 {%else%}
-                <form method="post" action="/login">
+                <form method="post" action="{{routePrefix}}/login">
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">Username:</label>
                         <input type="text" class="form-control" id="uname" name="uname" placeholder="Enter username">
                     </div>
                 {%endif%}
@@ -30,7 +31,7 @@
 
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="passw" name="passw" placeholder="Enter password / Leave blank on first session">
+                        <input type="password" class="form-control" id="passw" name="passw" placeholder="Enter password / Leave blank on first session*">
                     </div>
                     {%if(firstLogin)%}
                     <div class="form-group">
@@ -65,6 +66,9 @@
                         Login
                         {%endif%}
                     </button>
+                    <div><br/><br/>
+                        * Leave blank only after internal registration<br/><br/>
+                    </div>
                 </form>
             </div>
         </div>
