--- a/templates/login.html
+++ b/templates/login.html
@@ -65,7 +65,8 @@
                         {%else%}
                         Login
                         {%endif%}
-                    </button>
+                    </button><br/>
+                    <a href="/" class="btn btn-secondary btn-sm">Cancel</a>
                     <div><br/><br/>
                         * Leave blank only after internal registration<br/><br/>
                     </div>
